# Portfolio

./: .gitignore  .gitmodules  README.md
PUBG_Detection/: README.md
Personal/: README.md
Side_Project/Houes-Remodeling/: README.md
Side_Project/Houes-Remodeling/code/: gradient_boosting_model.pkl  lgbm_model.pkl
Side_Project/PUBG-Hack-Detection/: README.md
Side_Project/topic_modeling/: .gitignore  pyproject.toml
Side_Project/topic_modeling/jupyter/: topic.ipynb
Side_Project/리모델링/code/: House_Remodeling.ipynb
Side_Project/불만유형/code/: voc_category_analysis.ipynb
Upstage_AI_Lab/ML-Regression/code/: APT-prediction.ipynb  Bayesian.py  Missing-Regressor.ipynb  Missing-lat-lon.ipynb  Train-Test_lat_lon.ipynb  lat-lon.ipynb
Upstage_Project/: README.md
Upstage_Project/CV-Classification/: .gitignore  README.md
Upstage_Project/CV-Classification/code/: EDA.ipynb  Final.ipynb  Inference.py  Load_Data.py  Preprocess.py  Test_EDA.ipynb  Train.py  baseline_code.ipynb
Upstage_Project/CV-Classification/data/: get_data.sh
Upstage_Project/CV-Classification/docs/: wandb_guide.md
Upstage_Project/ML-Regression/: README.md
Upstage_Project/NLP-Summarization/: README.md  pyproject.toml
Upstage_Project/NLP-Summarization/conf/: config.yaml
Upstage_Project/NLP-Summarization/docs/: Wandb.README.md
Upstage_Project/NLP-Summarization/input/: get_data.sh
Upstage_Project/NLP-Summarization/jupyter/: EDA.ipynb  Preprocessing.ipynb  baseline.ipynb
Upstage_Project/NLP-Summarization/src/: main.ipynb  main.py
Zerobase_Project/: README.md
(+9 files in other folders)
